--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "express": "^5.2.1",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.3",
+    "module-alias": "^2.2.3",
     "morgan": "^1.10.1",
     "ms": "^2.1.3",
     "supertest": "^7.2.2",
@@ -35,5 +36,8 @@
   },
   "prisma": {
     "seed": "node prisma/seed.js"
+  },
+  "_moduleAliases": {
+    "@": "src"
   }
 }
