--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,8 @@
     "module-alias": "^2.2.3",
     "morgan": "^1.10.1",
     "ms": "^2.1.3",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "supertest": "^7.2.2",
     "uuid": "^13.0.0",
     "winston": "^3.19.0",
