--- a/backend/package.json
+++ b/backend/package.json
@@ -15,7 +15,9 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^6.19.2",
+    "axios": "^1.13.2",
     "bcrypt": "^6.0.0",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
@@ -24,8 +26,6 @@
     "module-alias": "^2.2.3",
     "morgan": "^1.10.1",
     "ms": "^2.1.3",
-    "passport": "^0.7.0",
-    "passport-google-oauth20": "^2.0.0",
     "supertest": "^7.2.2",
     "uuid": "^13.0.0",
     "winston": "^3.19.0",
