--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
     "module-alias": "^2.2.3",
     "morgan": "^1.10.1",
     "ms": "^2.1.3",
+    "multer": "^2.0.2",
     "supertest": "^7.2.2",
     "uuid": "^13.0.0",
     "winston": "^3.19.0",
